# Elastos.SDK.Keypair.Wrapper.Android

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  ElastosSdkKeypairFileCoinJni.cpp  ElastosSdkKeypairJni.cpp  ElastosSdkKeypairJni.hpp  ElastosWalletLibJni.cpp  JniUtils.cpp  JniUtils.hpp  Log.cpp  Log.hpp
lib/src/main/java/org/elastos/sdk/keypair/: ElastosKeypair.java  ElastosKeypairCrypto.java  ElastosKeypairDID.java  ElastosKeypairFileCoin.java  ElastosKeypairHD.java  ElastosKeypairSign.java  NativeBridge.java
lib/src/main/java/org/elastos/wallet/lib/: ElastosWallet.java  ElastosWalletDID.java  ElastosWalletHD.java  ElastosWalletSign.java  NativeBridge.java
scripts/: build-depends.sh  build.sh  clean-depends.sh
test/: build.gradle
test/src/main/: AndroidManifest.xml
test/src/main/java/org/elastos/sdk/keypair/test/: MainActivity.java
test/src/main/java/org/elastos/wallet/lib/test/: MainActivity.java
test/src/main/res/layout/: activity_main.xml
test/src/main/res/values/: strings.xml
